# src/interfaces/recipe/RecipeResponseDto.ts
@@ -1,6 +1,11 @@
+import { SuccessResponse } from '../common/SuccessResponse';
 export interface RecipeResponseDto {
-  name: string;
+  imageURL: string;
+  writer: string;
   food: string;
   ingredient: string;
   content: string;
+}
+export interface EachRecipeResponseDto extends SuccessResponse {
+  data: RecipeResponseDto;
 }
